Adamantium/Adamantium.GameInput/Generated/Interop/Functions/Adamantium.GameInput.Functions.cs

// ----------------------------------------------------------------------------------------------
// <auto-generated>
// This file was autogenerated by QuantumBindingGenerator.
// Do not edit this file manually because you will lose all your changes after the next generation.
// </auto-generated>
// ----------------------------------------------------------------------------------------------

using System.Security;
using System;
using System.Runtime.CompilerServices;
using System.Runtime.InteropServices;
using QuantumBinding.Utils;
using Adamantium.GameInput;

namespace Adamantium.GameInput.Interop;

public static unsafe partial class GameInputInterop
{
    public const string LibraryPath = "gameinput-c-shared";

    ///<summary>
    /// Returns an HRESULT: fails when GameInput is not installed.
    ///</summary>
    [DllImport(LibraryPath, EntryPoint = "gameinputc_create", ExactSpelling = true, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int gameinputc_create(Adamantium.GameInput.Interop.GameInputContextT* outContext);

    [DllImport(LibraryPath, EntryPoint = "gameinputc_device_info", ExactSpelling = true, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void gameinputc_device_info(Adamantium.GameInput.Interop.GameInputDeviceT device, Adamantium.GameInput.Interop.GameInputDeviceInfo* outInfo);

    ///<summary>
    /// Valid while the device is. May be null.
    ///</summary>
    [DllImport(LibraryPath, EntryPoint = "gameinputc_device_name", ExactSpelling = true, CallingConvention = CallingConvention.Cdecl)]
    internal static extern sbyte* gameinputc_device_name(Adamantium.GameInput.Interop.GameInputDeviceT device);

    [DllImport(LibraryPath, EntryPoint = "gameinputc_device_release", ExactSpelling = true, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void gameinputc_device_release(Adamantium.GameInput.Interop.GameInputDeviceT device);

    ///<summary>
    /// The latest reading of the gamepad. Returns 1 when there was one.
    ///</summary>
    [DllImport(LibraryPath, EntryPoint = "gameinputc_read_gamepad", ExactSpelling = true, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int gameinputc_read_gamepad(Adamantium.GameInput.Interop.GameInputContextT context, Adamantium.GameInput.Interop.GameInputDeviceT device, Adamantium.GameInput.Interop.GameInputGamepadState* outState);

    [DllImport(LibraryPath, EntryPoint = "gameinputc_release", ExactSpelling = true, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void gameinputc_release(Adamantium.GameInput.Interop.GameInputContextT context);

    ///<summary>
    /// Each motor 0..1; zeros stop it.
    ///</summary>
    [DllImport(LibraryPath, EntryPoint = "gameinputc_set_rumble", ExactSpelling = true, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void gameinputc_set_rumble(Adamantium.GameInput.Interop.GameInputDeviceT device, float lowFrequency, float highFrequency, float leftTrigger, float rightTrigger);

    ///<summary>
    /// The system buttons held on the gamepad now.
    ///</summary>
    [DllImport(LibraryPath, EntryPoint = "gameinputc_system_buttons", ExactSpelling = true, CallingConvention = CallingConvention.Cdecl)]
    internal static extern GameInputSystemButtons gameinputc_system_buttons(Adamantium.GameInput.Interop.GameInputDeviceT device);

    ///<summary>
    /// Starts reporting gamepads; the ones already connected are reported before it returns. Returns an HRESULT.
    ///</summary>
    [DllImport(LibraryPath, EntryPoint = "gameinputc_watch_gamepads", ExactSpelling = true, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int gameinputc_watch_gamepads(Adamantium.GameInput.Interop.GameInputContextT context, nuint callback, void* userData);

}



